--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3'
+version: "3"
 
 services:
-  redis:
-    image: redis:alpine
-    ports:
-      - 6379:6379
-  mongodb:
-    image: mongo:5
-    ports:
-      - 27017:27017
+    redis:
+        image: redis:alpine
+        ports:
+            - 6379:6379
+    mongodb:
+        image: mongo:5
+        ports:
+            - 27017:27017
