--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
 	},
 	"dependencies": {
 		"@nestjs/common": "^8.0.0",
+		"@nestjs/config": "^2.2.0",
 		"@nestjs/core": "^8.0.0",
+		"@nestjs/jwt": "^9.0.0",
+		"@nestjs/mongoose": "^9.2.0",
 		"@nestjs/platform-express": "^8.0.0",
 		"argon2": "^0.28.7",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.13.2",
 		"helmet": "^5.1.1",
 		"mongoose": "^6.4.6",
+		"nanoid": "3",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"rxjs": "^7.2.0"
