--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validation": "^4.1.0",
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
